make sure ImageLoader doesn't get in the way of nvigation (re z-index)

--- a/src/components/ImageLoader/ImageLoader.scss
+++ b/src/components/ImageLoader/ImageLoader.scss
@@ -2,6 +2,7 @@
 
 .image-loader {
 	@include flexbox-center(column);
+	z-index: -1;
 }
 .spinner-container {
 	@include flexbox-center(column);
@@ -22,8 +23,6 @@
 }
 .spinner {
 	margin: 0px auto;
-	z-index: 999999999;
-
 	border-top: 5px solid $grey;
 	border-right: 5px solid rgba(255, 255, 255, 0);
 	border-bottom: 5px solid rgba(255, 255, 255, 0);
